--- a/style.css
+++ b/style.css
@@ -2,7 +2,18 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+}
+
 body {
+    background-image: url(chatka_male-768x281.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: 50%;
+    background-color: hsla(0,0%,0%,0.17);
+    background-blend-mode: overlay;
+
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
@@ -52,14 +63,20 @@ header {
 .intro__content {
     background-color: white;
     opacity: 0.7;
-    padding: 1em;
+    padding: 0 1em;
     width: 30%;
 }
 
 .body__backgroud {
     position: absolute;
-    right: 0;
+    /* right: 0;
     bottom: 0;
+    left: calc(50% - 626px);
+    right: calc(50% + 626px);
+    top: calc(50% - 278px);
+    bottom: calc(50% + 278px); */
+    left: 0;
+    top: 0;
     z-index: -1;
 
     opacity: 0.3;
