--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: 50%;
-    background-color: hsla(0,0%,0%,0.17);
+    background-color: hsla(0,0%,0%,0.17); 
     background-blend-mode: overlay;
 
     margin: 0;
@@ -31,9 +31,12 @@ header {
     width: 80%;
     max-width: 1100px;
     margin: 0 auto;
+    /* padding-top: 5rem; */
 }
 
 .buttons__section {
+    background-color: rgba(255, 255, 255, 0.5);
+
     display: flex;
     align-items: stretch;
     flex-wrap: wrap;
@@ -45,9 +48,8 @@ header {
 }
 
 .custom__button {
-    background-color: white;
-    border: 0;
-    border-radius: 1em;
+    background-color: transparent;
+    border: transparent;
     height: 8rem;
     width: 8rem;
     margin: 1rem;
@@ -67,18 +69,6 @@ header {
     width: 30%;
 }
 
-.body__backgroud {
-    position: absolute;
-    /* right: 0;
-    bottom: 0;
-    left: calc(50% - 626px);
-    right: calc(50% + 626px);
-    top: calc(50% - 278px);
-    bottom: calc(50% + 278px); */
-    left: 0;
-    top: 0;
-    z-index: -1;
-
-    opacity: 0.3;
-    width: 1536px;
+.intro__content p:last-child {
+    font-weight: bolder;
 }
